Reimplement registration endpoint
- add new meter on registration
- write documentation
- write tests
- add middlewares
