# server/controllers/auth.js
@@ -1,28 +1,47 @@
 import authHelper from '../helpers/auth';
-import authServices from '../services/authService';
+import { authService } from '../services/authService';
+import { meterService } from '../services/meterService';
 
+const randomstring = require('randomstring');
 /**
  * @class AuthController
  */
 export default class AuthController {
   /**
    * @method register
-   * @description registers a new user with their email, password and meterNumber
+   * @description registers a new user with their email, password and also creates a meter for the user using their meterNumber
    * @param {*} req
    * @param {*} res
    * @returns {object} registered user
    */
   static async register(req, res) {
-    const { email, password, meterId } = req.body;
+    const { body, distributor } = req;
 
-    const user = await authServices.create({ email, password, meterId });
+    const user = await authService.create(body);
 
-    user.meters.push(meterId);
+    const { _id, email } = user;
+
+    // client id is supposed to be generated by aws, i'm using a random generator because we are skipping that flow for speed of development
+    const clientId = randomstring.generate({
+      length: 12,
+      charset: 'alphabetic',
+    });
+
+    const meter = await meterService.create({
+      user: user._id,
+      distributor,
+      clientId,
+      meterNumber: body.meterNumber,
+    });
+
+    user.meters.push(meter._id);
     user.save();
+    const token = authHelper.encode({ _id, email });
 
     return res.status(200).json({
       status: true,
-      message: 'user created successfully',
+      message: 'Registration successful',
+      token,
       user,
     });
   }
